--- a/src/libft/Makefile
+++ b/src/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: xamayuel <xamayuel@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/05/06 09:14:35 by xamayuel          #+#    #+#              #
-#    Updated: 2024/02/17 23:53:04 by xamayuel         ###   ########.fr        #
+#    Updated: 2024/02/19 12:29:43 by xamayuel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -44,10 +44,8 @@ SRC = /ft_isalpha.c /ft_toupper.c \
 		/ft_bzero.c   /ft_strnstr.c \
 		/ft_memcpy.c  /ft_atoi.c \
 		/ft_memmove.c /ft_strchrc.c \
-		/ft_strlcpy.c /ft_archives.c \
-		/ft_strlcat.c /get_next_line.c \
-		/ft_strcat.c /get_next_line_utils.c \
-		/ft_archives.c
+		/ft_strlcpy.c  \
+		/ft_strlcat.c /ft_strcat.c 
 
 SRC += /ft_calloc.c /ft_strdup.c
 SRC += /ft_substr.c /ft_strjoin.c
