--- a/src/parser/makefile
+++ b/src/parser/makefile
@@ -6,7 +6,7 @@
 #    By: xamayuel <xamayuel@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/19 12:00:15 by xamayuel          #+#    #+#              #
-#    Updated: 2024/02/20 11:22:13 by xamayuel         ###   ########.fr        #
+#    Updated: 2024/02/20 14:06:06 by xamayuel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -37,7 +37,8 @@ SRC =	$(SRC_DIR)/ft_parse_map.c \
 		$(SRC_DIR)/ft_parse_map_texture.c \
 		$(SRC_DIR)/ft_parse_map_lines.c \
 		$(SRC_DIR)/ft_count_map_lines.c \
-		$(SRC_DIR)/ft_parse_map_player.c
+		$(SRC_DIR)/ft_parse_map_player.c\
+		$(SRC_DIR)/ft_show_parse_error.c
 		
 OBJ = $(patsubst %.c, $(OBJ_DIR)%.o, $(SRC))
 CC = gcc
