--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,12 @@
 		"cube3d.h": "c",
 		"game_struct.h": "c",
 		"random": "c",
-		"parser.h": "c"
+		"parser.h": "c",
+		"system_error": "c",
+		"array": "c",
+		"functional": "c",
+		"tuple": "c",
+		"type_traits": "c",
+		"utility": "c"
 	}
 }
