--- a/src/game/makefile
+++ b/src/game/makefile
@@ -6,7 +6,7 @@
 #    By: xamayuel <xamayuel@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/13 15:38:08 by javigarc          #+#    #+#              #
-#    Updated: 2024/02/27 19:11:27 by xamayuel         ###   ########.fr        #
+#    Updated: 2024/02/28 15:36:00 by xamayuel         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -58,13 +58,14 @@ SRC = $(SRC_DIR)/game.c\
 OBJ = $(patsubst %.c, $(OBJ_DIR)%.o, $(SRC))
 CC = gcc
 HEAD = -I ../../includes \
-	   -I $(LIBFT_DIR) 
+	   -I $(LIBFT_DIR) \
+	   -I ../minilibx_linux
 CFLAGS = -Wall -Werror -Wextra
 LFLAGS = -L ./$(LIBFT_DIR) 
 RM = /bin/rm -rf
 
 # Linker flags for final binary linking, not for object files
-LFLAGS = -L$(LIBFT_DIR) -L$(GNL_DIR) -L$(MINILIBX_DIR) -lmlx
+LFLAGS = -L$(LIBFT_DIR) -L$(GNL_DIR) -L../minilibx_linux -lmlx
 LLFLAGS = -framework OpenGL -framework AppKit
 
 # Remove command
