previo al merge, aunque el commit bueno seria el anterior

--- a/src/game/makefile
+++ b/src/game/makefile
@@ -40,7 +40,7 @@ SRC = $(SRC_DIR)/game.c\
 	$(SRC_DIR)/ft_load_textures.c\
 	$(SRC_DIR)/ft_movement.c\
 	$(SRC_DIR)/ft_collisions.c\
-	 # $(SRC_DIR)/game_raycaster.c\
+	$(SRC_DIR)/ft_mouse_rot.c\
 	  #$(SRC_DIR)/game_calculus.c\
 	  #$(SRC_DIR)/game_color.c\
 	  #$(SRC_DIR)/game_draw.c\
