--- a/src/game/makefile
+++ b/src/game/makefile
@@ -45,7 +45,8 @@ SRC = $(SRC_DIR)/game.c\
 	$(SRC_DIR)/ft_sky_floor_draw.c\
 	$(SRC_DIR)/ft_minimap.c\
 	$(SRC_DIR)/ft_calculate_dda.c\
-	$(SRC_DIR)/ft_draw_textures.c \
+	$(SRC_DIR)/ft_draw_textures.c\
+	$(SRC_DIR)/ft_door_system.c\
 
 OBJ = $(patsubst %.c, $(OBJ_DIR)%.o, $(SRC))
 CC = gcc
