hay que cambiar el game.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
 		"type_traits": "c",
 		"utility": "c",
 		"get_next_line.h": "c",
-		"game.h": "c"
+		"game.h": "c",
+		"key_macos.h": "c"
 	}
 }
